--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
-Gamecube/build
-Gamecube/WiiSXR.elf
-Gamecube/WiiSXR.dol
-Gamecube/release/apps/wiiSXR/boot.dol
-wiiSXR-*.zip
+
+*.o
+*.d
+Gamecube/*.dol
+Gamecube/*.elf
+Gamecube/build_debug/*.*
+Gamecube/build_release/*.*
+
