--- a/Gamecube/Makefile_Wii_Release
+++ b/Gamecube/Makefile_Wii_Release
@@ -21,7 +21,7 @@ GPU = Soft
 # SOURCES is a list of directories containing source code
 # INCLUDES is a list of directories containing extra header files
 #---------------------------------------------------------------------------------
-TARGET		:=	WiiSXRX_Release
+TARGET		:=	WiiStation_Release
 BUILD		:=	build_release
 SOURCES		:=	../lang ../fonts \
                 . ./gc_input/ ./libgui/ ./menu/ ./fileBrowser/ .. ../ppc/ ../Peops$(GPU)GPU/ \
