--- a/Gamecube/release/apps/Makefile
+++ b/Gamecube/release/apps/Makefile
@@ -1,23 +1,23 @@
-#Creates a WiiSXR Redistributable
+#Creates a WiiStation Redistributable
 ifndef ECHO
 ECHO = echo
 endif
 
-VERSION = beta2.2
+VERSION = 1.0beta
 
 .PHONY:  all
 
 all: dist
 
-dist: ../WiiSXRX.dol clean
+dist: ../WiiStation_Release.dol clean
 	@$(ECHO) "Making Redistributable..."
-	@cp ../WiiSXRX.dol apps/WiiSXRX/boot.dol
+	@cp ../WiiStation_Release.dol apps/WiiStation/boot.dol
 	@mkdir -p \
 		wiisxrx/bios \
 		wiisxrx/saves \
 		wiisxrx/isos
-	@zip -r ../../WiiSXRX-$(VERSION).zip wiisxrx apps README
+	@zip -r ../../WiiStation-$(VERSION).zip wiisxrx apps README
  
 clean:
 	@$(ECHO) "Cleaning..."
-	@rm -f apps/WiiSXRX/boot.dol ../../WiiSXRX-*.zip
+	@rm -f apps/WiiStation/boot.dol ../../WiiStation-*.zip
