--- a/Gamecube/Makefile_Wii_Release
+++ b/Gamecube/Makefile_Wii_Release
@@ -35,7 +35,7 @@ INCLUDES	:=
 # options for code generation
 #---------------------------------------------------------------------------------
 
-CFLAGS	= -flto -Ofast -w -fpermissive $(MACHDEP) $(INCLUDE) -D__GAMECUBE__ -DWII -DHW_RVL -D__ppc__ \
+CFLAGS	= -flto -Ofast -w -Wno-stringop-truncation -Wno-strict-aliasing -Wno-misleading-indentation -fpermissive $(MACHDEP) $(INCLUDE) -D__GAMECUBE__ -DWII -DHW_RVL -D__ppc__ \
 		  -D__GX__ \
 		  -DTHREADED_AUDIO -D_GNU_SOURCE #-DRELEASE
 
@@ -102,8 +102,7 @@ export OFILES	:=	$(addsuffix .o,$(BINFILES)) \
 export INCLUDE	:=	$(foreach dir,$(INCLUDES),-I$(CURDIR)/$(dir)) \
 					$(foreach dir,$(LIBDIRS),-I$(dir)/include) \
 					-I$(CURDIR)/$(BUILD) \
-					-I$(LIBOGC_INC) \
-					-I$(DEVKITPRO)/libogc/include, -I$(DEVKITPRO)/libogc/ogc, -I$(DEVKITPRO)/libogc/ogc/machine, -I$(DEVKITPRO)/libfat/libogc/include
+					-I$(LIBOGC_INC)
 
 #---------------------------------------------------------------------------------
 # build a list of library paths
@@ -120,7 +119,7 @@ $(BUILD):
 	@[ -d $@ ] || mkdir -p $@
 	@$(MAKE) --no-print-directory -C $(BUILD) -f $(CURDIR)/Makefile_Wii_Release -j4
 	@echo creating ... $(notdir $(OUTPUT)).dol
-	@$(DEVKITPPC)/bin/elf2dol $(OUTPUT).elf $(OUTPUT).dol
+	@$(DEVKITPRO)/tools/bin/elf2dol $(OUTPUT).elf $(OUTPUT).dol
 
 #---------------------------------------------------------------------------------
 clean:
@@ -151,6 +150,9 @@ $(OUTPUT).elf: $(OFILES)
 %.dat.o : %.dat
 	@echo $(notdir $<)
 	$(bin2o)
+
+dsihandler.o:		./vm/dsihandler.s
+		$(CC) -x assembler-with-cpp $(CFLAGS) -D_LANGUAGE_ASSEMBLY -c -o $@ $<
 
 -include $(DEPENDS)
 
