add old DYNACORE
The new Lightrec core may have some minor details, so we will still add the original DYNACORE as an option. If there are issues with the Lightrec core running the game, you can try the old DYNACORE.

--- a/Gamecube/Makefile_Wii_Release
+++ b/Gamecube/Makefile_Wii_Release
@@ -25,7 +25,7 @@ TARGET		:=	WiiSXRX_Release
 BUILD		:=	build_release
 SOURCES		:=	../lang ../fonts \
                 . ./gc_input/ ./libgui/ ./menu/ ./fileBrowser/ .. ../Peops$(GPU)GPU/ \
-				./libgui/gui2 ../dfsound/ ./vm
+				./libgui/gui2 ../dfsound/ ./vm ../ppc
 
 DATA		:=	data
 
