--- a/Gamecube/Makefile_Wii
+++ b/Gamecube/Makefile_Wii
@@ -25,7 +25,7 @@ TARGET		:=	WiiSXRX_debug
 BUILD		:=	build_debug
 SOURCES		:=	../lang ../fonts \
                 . ./gc_input/ ./libgui/ ./menu/ ./fileBrowser/ .. ../Peops$(GPU)GPU/ \
-				./libgui/gui2 ../dfsound/ ./vm
+				./libgui/gui2 ../dfsound/ ./vm ../ppc
 
 DATA		:=	data
 
