--- a/Gamecube/Makefile_Wii
+++ b/Gamecube/Makefile_Wii
@@ -9,6 +9,8 @@ endif
 
 include $(DEVKITPRO)/libogc2/wii_rules
 
+CHDLIBDIR = ../deps/libchdr
+
 #---------------------------------------------------------------------------------
 # GPU Plugin (GX or Soft)
 # For example, run "make GPU=GX" for GX
@@ -24,7 +26,7 @@ GPU = Soft
 TARGET		:=	WiiSXRX_debug
 BUILD		:=	build_debug
 SOURCES		:=	../lang ../fonts \
-                . ./gc_input/ ./libgui/ ./menu/ ./fileBrowser/ .. ../Peops$(GPU)GPU/ \
+                . ./gc_input/ ./libgui/ ./menu/ ./fileBrowser/ .. $(CHDLIBDIR)/src/ ../Peops$(GPU)GPU/ \
 				./libgui/gui2 ../dfsound/ ./vm ../ppc
 
 DATA		:=	data
