--- a/Gamecube/Makefile_Wii_Release
+++ b/Gamecube/Makefile_Wii_Release
@@ -26,7 +26,7 @@ GPU = Soft
 TARGET		:=	WiiSXRX_Release
 BUILD		:=	build_release
 SOURCES		:=	../lang ../fonts \
-                $(CHDLIBDIR)/src/ $(CHDLIBDIR)/src/deps/lzma $(CHDLIBDIR)/src/deps/zlib \
+                $(CHDLIBDIR)/src/ $(CHDLIBDIR)/src/deps/lzma/ $(CHDLIBDIR)/src/deps/zlib/ \
                 . ./gc_input/ ./libgui/ ./menu/ ./fileBrowser/ .. ../Peops$(GPU)GPU/ \
 				./libgui/gui2 ../dfsound/ ./vm ../ppc
 
