Import gpulib, gamefix etc from PcsxRearm and Wiisx
gpulib, mdec, gpu_busy_hack, gpu_slow_list_walking
triple buffering of wiisx.

Although GPU_ Busy_ hack can work, Hot Wheels still experiences read errors

need more test

--- a/Gamecube/Makefile_Wii
+++ b/Gamecube/Makefile_Wii
@@ -27,7 +27,8 @@ TARGET		:=	WiiSXRX_debug
 BUILD		:=	build_debug
 SOURCES		:=	../lang ../fonts \
                 $(CHDLIBDIR)/src/ $(CHDLIBDIR)/deps/lzma-19.00/ $(CHDLIBDIR)/deps/zlib-1.2.13/ \
-                . ./gc_input/ ./libgui/ ./menu/ ./fileBrowser/ .. ../Peops$(GPU)GPU/ \
+                . ./gc_input/ ./libgui/ ./menu/ ./fileBrowser/ .. \
+                ../gpulib/ ../SoftGPU/ \
 				./libgui/gui2 ../dfsound/ ./vm ../ppc
 
 DATA		:=	data
