Changed the lightrec compilation parameters
 without significant effect, only resulting in a smaller compiled file

--- a/deps/lightrec/Makefile.NoLog
+++ b/deps/lightrec/Makefile.NoLog
@@ -65,10 +65,10 @@ $(LIB_DIR)/libLightrecNoLog.a: $(LIGHRREC_OBJS)
 	@echo ----
 
 # Compilation flags.
-COMMON_FLAGS	:= -g -O3 -w -Wno-parentheses $(MACHDEP)
+COMMON_FLAGS	:= -g -O2 -w $(MACHDEP) -fvisibility=hidden
 INCLUDES		:= -Iinclude -I$(LIBOGC_INC)
 DEFINES			:= -DGEKKO
-CFLAGS			:= $(COMMON_FLAGS) $(INCLUDES) $(INCLUDE) $(DEFINES)--pedantic -D__BIG_ENDIAN -D__powerpc__ -DBIG_ENDIAN -DLOG_LEVEL=0
+CFLAGS			:= $(COMMON_FLAGS) $(INCLUDES) $(INCLUDE) $(DEFINES)--pedantic -D__BIG_ENDIAN -D__powerpc__ -DBIG_ENDIAN -DLOG_LEVEL=0 -DNDEBUG
 
 # Test link flags.
 LDFLAGS			:= $(COMMON_FLAGS) -L$(LIB_DIR) -L$(LIBOGC_LIB) $(PORTLIBS_PATH)/wii/lib -llightning
