--- a/Gamecube/Makefile_Wii_Release
+++ b/Gamecube/Makefile_Wii_Release
@@ -27,7 +27,7 @@ TARGET		:=	WiiSXRX_Release
 BUILD		:=	build_release
 SOURCES		:=	../lang ../fonts \
                 $(CHDLIBDIR)/src/ $(CHDLIBDIR)/deps/lzma-19.00/ $(CHDLIBDIR)/deps/zlib-1.2.13/ \
-                . ./gc_input/ ./libgui/ ./menu/ ./fileBrowser/ .. \
+                ../Nintendont/ . ./gc_input/ ./libgui/ ./menu/ ./fileBrowser/ .. \
                 ../gpulib/ ../SoftGPU/ \
 				./libgui/gui2 ../dfsound/ ./vm ../ppc
 
