Logic correction for reading settings files

--- a/Gamecube/release/controllers/054C_0268.ini
+++ b/Gamecube/release/controllers/054C_0268.ini
@@ -4,25 +4,24 @@ PID=0268
 Polltype=0
 DPAD=0
 DigitalLR=2
-Power=2,01
-A=3,20
-B=3,40
-X=3,10
-Y=3,80
-Z=3,08
-L2=10,F0
-R2=11,F0
-L=12,F0
-R=13,F0
-S=2,08
-Select=2,04
-Left=2,80
-Down=2,40
-Right=2,20
-Up=2,10
-StickX=6
-StickY=7
-CStickX=8
-CStickY=9
+Rumble=1
+KeyA=3,80
+KeyB=3,40
+KeyX=3,20
+KeyY=3,10
+KeyL1=3,04
+KeyR1=3,08
+KeyL2=3,01
+KeyR2=3,02
+KeyStart=2,08
+KeySelect=2,01
+KeyLeft=2,80
+KeyDown=2,40
+KeyRight=2,20
+KeyUp=2,10
+StickX=6,0,800
+StickY=7,0,800
+CStickX=8,0,800
+CStickY=9,0,800
 LAnalog=12
 RAnalog=13
