--- a/Gamecube/Makefile_Wii_Release
+++ b/Gamecube/Makefile_Wii_Release
@@ -24,7 +24,7 @@ GPU = Soft
 TARGET		:=	WiiSXRX_Release
 BUILD		:=	build_release
 SOURCES		:=	../lang ../fonts \
-                ../Nintendont/ . ./gc_input/ ./libgui/ ./menu/ ./fileBrowser/ .. \
+                ../HidController/ . ./gc_input/ ./libgui/ ./menu/ ./fileBrowser/ .. \
                 ../gpulib/ ../SoftGPU/ \
 				./libgui/gui2 ../dfsound/ ./vm ../ppc
 
