update ps4 controller rumble logic

--- a/Gamecube/release/controllers/054C_05C4.ini
+++ b/Gamecube/release/controllers/054C_05C4.ini
@@ -28,3 +28,11 @@ CStickX=3,0,0
 CStickY=4,0,0
 LAnalog=8
 RAnalog=9
+Rumble=1
+RumbleType=1
+RumbleDataLen=10
+RumbleDataOn=05,03,00,00,C0,00,00,00,20,00,00
+RumbleDataOff=05,03,00,00,00,00,00,00,20,00,00
+RumbleTransferLen=0B
+RumbleTransfers=1
+
